fix(analytics): address code review — 3 CRITICALs + 4 IMPORTANTs + 2 SUGGESTIONs
CRITICAL fixes:
- C1: Replace Map.of() with LinkedHashMap for null-safe JSON responses
- C3: Wrap use case dispatch in try/catch → BadRequestException (400)

IMPORTANT fixes:
- I4: Extract shared AnalyticsApiValidator to eliminate ~128 lines of
  validation duplication across 4 use cases
- I8: Consolidate 3 duplicated mat-card blocks into single card

SUGGESTION fixes:
- S1: Remove no-op getStatusLabel function
- S7: Fix type cast with Record<string, number> assertion

Also adds CODE_REVIEW.md with resolution column for all 19 items.